--- a/docs/ci/install-memfault-cli.mdx
+++ b/docs/ci/install-memfault-cli.mdx
@@ -103,7 +103,7 @@ To use a Memfault Project key, pass `--project-key` after the `memfault`
 command.
 
 ```
-$ memfault --project-key ${PROJECT_KEY} ...
+$ memfault --project-key ${YOUR_PROJECT_KEY} ...
 ```
 
 ### Example Usage: Uploading Firmware Symbols
